Agregué el register y la base del carrito

--- a/views/carrito.html
+++ b/views/carrito.html
@@ -47,29 +47,8 @@
 
     </header>
 
-    <main class= "register-main">
-        <section clas= "login-form">
-            <form action = "/login" method ="POST">
-                <p class= "titulo"><strong>Iniciar Sesión</strong></p>
-                <label for="email"><strong>EMAIL</strong></label>
-                <br>
-                <input type="email" name="email" id="email">
-                <br>
-                <br>
-                <label for="password"><strong>CONTRASEÑA</strong></label>
-                <br>
-                <input type="password" name="password" id="password">
-                <br>
-                <br>
-                <a href="" >¿Olvidaste tu contraseña?</a>
-                <br>
-                <br>
-                <button type="submit">INICIAR SESIÓN</button>
-                <br>
-                <br>
-                <a href="">¿No tenés cuenta? Creá tu cuenta</a>
-            </form>
-        </section>
+    <main>
+        <h1>Hola</h1>
     </main>
     <footer>
         <div class="footer">
