--- a/views/home.html
+++ b/views/home.html
@@ -47,10 +47,16 @@
 
     </header>
 
-    <main>
+    <main class= "main-home">
         <section class= "hero">
             <img width= 1200 height= 600 src= "images/planta.jpg">
-
+            <a href= ""><i class="fas fa-angle-left"></i></a>
+            <a href= ""><i class="fas fa-angle-right"></i></a>
+        </section>
+        <br>
+        <section class= "section-plantas">
+            <h2>PLANTAS</h2>
+            <img width= "500px" height= "300px" src= "images/PLANTASPARAVENDER.JPG">
         </section>
     </main>
     <footer>
