--- a/views/home.html
+++ b/views/home.html
@@ -14,19 +14,18 @@
     <header>
         <div class="header-top">
             <div class="search-box">
-                <form action="" method="POST">
-                    <i class="fas fa-search"></i>    <input type="text" name="search" placeholder="Buscar">
-                 </form> 
+                <span class= "icon"><i class="fas fa-search"></i></span>
+                <input class= "search" type="text" name="search" id= "search" placeholder="Buscar">
             </div>
             
-            <div class="logo"><img width= 150px heigth= 150px src="images/logo.jpeg" alt="logo"></div>
+            <div class="logo"><img width= 300px heigth= 300px src="images/logonuevo.png" alt="logo"></div>
             
             <div class="header-right">
             
               <ul>
-                  <li class="header-right"><a href="#"><i class="fas fa-user"></i>Iniciar sesión</a></li>
-                  <li class="header-right"><a href="#"><i class="fas fa-user-plus"></i>Registrarse</a></li>
-                  <li class="header-right"><a href="#"><i class="fas fa-shopping-cart"></i>Carrito</a></li>
+                  <li class="header-right"><a href="#"><i class="fas fa-user"></i> Iniciar sesión</a></li>
+                  <li class="header-right"><a href="#"><i class="fas fa-user-plus"></i> Registrarse</a></li>
+                  <li class="header-right"><a href="#"><i class="fas fa-shopping-cart"></i> Carrito</a></li>
               </ul>
           </div>
         </div>
@@ -49,14 +48,18 @@
 
     <main class= "main-home">
         <section class= "hero">
-            <img width= 1200 height= 600 src= "images/planta.jpg">
+            <img width= 1200 height= 600 src= "images/slide1.jpg">
             <a href= ""><i class="fas fa-angle-left"></i></a>
             <a href= ""><i class="fas fa-angle-right"></i></a>
         </section>
         <br>
         <section class= "section-plantas">
-            <h2>PLANTAS</h2>
-            <img width= "500px" height= "300px" src= "images/PLANTASPARAVENDER.JPG">
+            <h2 class= "titulo-plantas">PLANTAS</h2>
+            <a href= ""><img width= "500px" height= "300px" src= "images/PLANTASPARAVENDER.JPG"></a>
+        </section>
+        <section class= "section-macetas">
+            <h2 class= "titulo-macetas">MACETAS</h2>
+            <a href= ""><img width= "400px" height= "100px" src= "images/macetas.jpeg"></a>
         </section>
     </main>
     <footer>
