--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,6 +8,7 @@ body {
 
 .main-home {
     background-color: #d9d9d9;
+    padding: 50px;
 }
 
 .header-top {
@@ -18,9 +19,18 @@ body {
 
 .search-box {
     display: flex;
-    justify-content: flex-start;
     align-items: center;
     margin: 10px;
+    width: 300px;
+    position: relative;
+}
+.search {
+    border: none; 
+    height: 40px;
+    width: 200px;
+    margin: 10px;
+    border-radius: 20px;
+    background-color: #e5e5e5
 }
 
 .logo {
@@ -31,11 +41,17 @@ body {
 
 .header-right {
     display: flex;
-    justify-content: flex-end;
     align-items: center;
     margin: 10px;
     color: black;
     text-decoration: none;
+    font-weight: bolder;
+}
+
+.header-right a{
+    color: #495057;
+    text-decoration: none;
+    font-weight: bolder;
 }
 
 .header-bottom {
@@ -122,7 +138,32 @@ section {
     right: 100px;
 }
 
+.section-plantas {
+    display: flex;
+    align-items:flex-start;
+    justify-content:flex-start;
+    margin: 0px 135px
+}
 
+.titulo-plantas {
+    position: relative;
+    left: 300px;
+}
+
+.section-macetas {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    margin: 0px 345px;
+    position: relative;
+    bottom: 300px
+}
+
+.titulo-macetas {
+    position: relative;
+    left: 250px;
+    top: 10px
+}
 .titulo {
     display: flex;
     position: relative;
@@ -246,3 +287,4 @@ section {
 .boton {
     width: 150px;
 }
+
