--- a/views/login.html
+++ b/views/login.html
@@ -14,19 +14,18 @@
     <header>
         <div class="header-top">
             <div class="search-box">
-                <form action="" method="POST">
-                    <i class="fas fa-search"></i>    <input type="text" name="search" placeholder="Buscar">
-                 </form> 
+                <span class= "icon"><i class="fas fa-search"></i></span>
+                <input class= "search" type="text" name="search" id= "search" placeholder="Buscar">
             </div>
             
-            <div class="logo"><img width= 150px heigth= 150px src="images/logo.jpeg" alt="logo"></div>
+            <div class="logo"><img width= 300px heigth= 300px src="images/logonuevo.png" alt="logo"></div>
             
             <div class="header-right">
             
               <ul>
-                  <li class="header-right"><a href="#"><i class="fas fa-user"></i>Iniciar sesión</a></li>
-                  <li class="header-right"><a href="#"><i class="fas fa-user-plus"></i>Registrarse</a></li>
-                  <li class="header-right"><a href="#"><i class="fas fa-shopping-cart"></i>Carrito</a></li>
+                  <li class="header-right"><a href="#"><i class="fas fa-user"></i> Iniciar sesión</a></li>
+                  <li class="header-right"><a href="#"><i class="fas fa-user-plus"></i> Registrarse</a></li>
+                  <li class="header-right"><a href="#"><i class="fas fa-shopping-cart"></i> Carrito</a></li>
               </ul>
           </div>
         </div>
