--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
 
     <title>Calathea</title>
 
-    <link href="css/styles.css" rel= "stylesheet">
+    <link href="css/styles2.css" rel= "stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/72a545861a.js" crossorigin="anonymous"></script>
@@ -55,63 +55,70 @@
     <br>
     <main>
         <section class= "hero">
-            <img width= 1200 height= 600 src= "images/slide1.jpg">
+            <img width= 300 height= 300 src= "images/slide1.jpg">
             <a href= ""><i class="fas fa-angle-left"></i></a>
             <a href= ""><i class="fas fa-angle-right"></i></a>
         </section>
         <br>
         <section class= "section-plantas">
             <h2 class= "titulo-plantas">PLANTAS</h2>
-            <a href= ""><img width= "500px" height= "300px" src= "images/PLANTASPARAVENDER.JPG"></a>
+            <a href= ""><img width= "320px" height= "300px" src= "images/PLANTASPARAVENDER.JPG"></a>
         </section>
         <section class= "section-macetas">
             <h2 class= "titulo-macetas">MACETAS</h2>
-            <a href= ""><img width= "400px" height= "100px" src= "images/macetas.jpeg"></a>
+            <a href= ""><img width= "300px" height= "100px" src= "images/macetas.jpeg"></a>
         </section>
     </main>
 
     <footer>
         <div class="footer-top">
+            <div class= footer-top-main>
+                <div class= "cont-footer">
+                    <span class="titulo-footer">CONTACTANOS</span>
+                    <ul>
+                        <li><i class="fas fa-phone"></i> +54 11 *******</li>
+                        <li><i class="fab fa-whatsapp"></i> +54 11 *****</li>
+                        <li><i class="fas fa-at"></i> contacto@calathea.com.ar</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Showroom: Amenábar 4587 2 "D". <br>Sucursal Palermo: Ravignani 5498, Capital Federal</li>
+                    </ul>
+                </div>
+                
+                <div class="cont-footer">
+                    <span class="titulo-footer">MEDIOS DE PAGO</span>
+                    <ul class="medios-de-pago">
+                        <li><img width= 50px heigth= 50px src= "images/visa.jpg"></li>
+                        <li><img width= 50px heigth= 50px src= "images/mastecard.jpg"></li>
+                        <li><img width= 50px heigth= 50px src= "images/american.jpg"></li>
+                        <!--
+                        <li><img width= 50px heigth= 50px src= "images/pagofacil.png"></li>
+                        <li><img width= 50px heigth= 50px src= "images/rapipago.jpg"></li>
+                        <li><img width= 50px heigth= 50px src= "images/mercadopago.jpeg"></li>-->
+                    </ul>
+                </div>
+                <div class="cont-footer">
+                    <span class="titulo-footer">REDES SOCIALES</span>
+                    <ul id="footer-rd">
+                        <li><i class="fab fa-instagram"> <a href="http://instagram.com" target="_blank"> Calathea</a></i></li>
+                        <li><i class="fab fa-facebook"><a href="http://facebook.com" target="_blank"></i> Somos Calathea </a></li>
+                    </ul>
+                </div>
+    
+                <div class="cont-footer">
+                    <form action="" method="POST">
+                        <div class="titulo-footer">NEWSLETTER</div>
+                        <label for="newsletter" id="newsletter">
+                        <input class= "newsletter" type="email" name="newsletter" placeholder="   Recibí novedades!"> 
+                    </form> 
+                </div>
 
-            <ul class= "cont-footer">Contactanos
-                <li><i class="fas fa-phone"></i> +54 11 *******</li>
-                <li><i class="fab fa-whatsapp"></i> +54 11 *****</li>
-                <li><i class="fas fa-at"></i> contacto@calathea.com.ar</li>
-                <li><i class="fas fa-map-marker-alt"></i> Showroom: Amenábar 4587 2 "D". <br>Sucursal Palermo: Ravignani 5498, Capital Federal</li>
-            </ul>
-            
-            <div class="container">
-                <ul>Medios de pago
-                    <li><img width= 50px heigth= 50px src= "images/visa.jpg"></li>
-                    <li><img width= 50px heigth= 50px src= "images/mastecard.jpg"></li>
-                    <li><img width= 50px heigth= 50px src= "images/american.jpg"></li>
-                    <!--
-                    <li><img width= 50px heigth= 50px src= "images/pagofacil.png"></li>
-                    <li><img width= 50px heigth= 50px src= "images/rapipago.jpg"></li>
-                    <li><img width= 50px heigth= 50px src= "images/mercadopago.jpeg"></li>-->
-                </ul>
-            </div>
-            
-            <ul id="footer-rd">REDES SOCIALES
-                <li><i class="fab fa-instagram"> <a href="http://instagram.com" target="_blank"> Calathea</a></i></li>
-                <li><i class="fab fa-facebook"><a href="http://facebook.com" target="_blank"></i> Somos Calathea </a></li>
-            </ul>
-
-            <div class="newsletter">
-                <form action="" method="POST">
-                    <label for="newsletter" id="newsletter"> NEWSLETTER
-                    <br>
-                    <input type="email" name="newsletter" placeholder="Recibí novedades!"> 
-                </form> 
             </div>
         </div>
     
         <div class="footer-bottom">
-                
-                <a href="">Inicio </a>  
-                <a href="">Productos </a>  
-                <a href="">Quiénes Somos </a>  
-                <a href="">Preguntas Frecuentes </a> 
+                <a href="">Inicio</a>  
+                <a href="">Productos</a>  
+                <a href="">Quiénes Somos</a>  
+                <a href="">Preguntas Frecuentes</a> 
                 <a href="">Contacto</a>
             </ul>
         </div>
