--- a/views/index.html
+++ b/views/index.html
@@ -55,18 +55,39 @@
     <br>
     <main>
         <section class= "hero">
-            <img width= 300 height= 300 src= "images/slide1.jpg">
+            <img height= 300px width= 300px src= "images/slide1.jpg">
             <a href= ""><i class="fas fa-angle-left"></i></a>
             <a href= ""><i class="fas fa-angle-right"></i></a>
         </section>
         <br>
-        <section class= "section-plantas">
-            <h2 class= "titulo-plantas">PLANTAS</h2>
-            <a href= ""><img width= "320px" height= "300px" src= "images/PLANTASPARAVENDER.JPG"></a>
+        <section class= "opciones-catalogo">
+            <section class= "opcion" id= "opcion1">
+                <p class="titulo-opcion"><a href="" >PLANTAS INTERIOR</a></p>
+            </section>
+            <section class= "opcion" id= "opcion2">
+                <p class="titulo-opcion"><a href= "">PLANTAS EXTERIOR</a></p>
+            </section>
+            <section class= "opcion" id= "opcion3">
+                <p class="titulo-opcion"><a href= "">DECO</a></p>
+            </section>
+            <section class= "opcion" id= "opcion4">
+                <p class="titulo-opcion"><a href= "">MACETAS</a></p>
+            </section>
+            <section class= "opcion" id= "opcion5">
+                <p class="titulo-opcion"><a href= "">ACCESORIOS</a></p>
+            </section>
+            <section class= "opcion" id= "opcion6">
+                <p class="titulo-opcion"><a href= "">FERTILIZANTES</a></p>
+            </section>
         </section>
-        <section class= "section-macetas">
-            <h2 class= "titulo-macetas">MACETAS</h2>
-            <a href= ""><img width= "300px" height= "100px" src= "images/macetas.jpeg"></a>
+        <p class= "titulo-pd">PRODUCTOS DESTACADOS</p>
+        <section class= "section-productos-destacados">
+            <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
+            <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
+            <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
+            <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
+            <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
+            <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
         </section>
     </main>
 
