--- a/views/index.html
+++ b/views/index.html
@@ -55,9 +55,13 @@
     <br>
     <main>
         <section class= "hero">
-            <img height= 300px width= 300px src= "images/slide1.jpg">
-            <a href= ""><i class="fas fa-angle-left"></i></a>
-            <a href= ""><i class="fas fa-angle-right"></i></a>
+            <div class= "hero-container">
+                <span><a class= "hero-texto" href= "">PROMOCIONES EXCLUSIVAS</a></span>
+                <div class= "flechas">
+                <a id= "flecha-izquierda" href= ""><i class="fas fa-angle-left"></i></a>
+                <a id= "flecha-derecha" href= ""><i class="fas fa-angle-right"></i></a>
+                </div>
+            </div>
         </section>
         <br>
         <section class= "opciones-catalogo">
