Modifiqué el carrito de compras

--- a/views/index.html
+++ b/views/index.html
@@ -132,7 +132,7 @@
                     <form action="" method="POST">
                         <div class="titulo-footer">NEWSLETTER</div>
                         <label for="newsletter" id="newsletter">
-                        <input class= "newsletter" type="email" name="newsletter" placeholder="   Recibí novedades!"> 
+                        <input class= "formulario" type="email" name="newsletter" placeholder="   Recibí novedades!"> 
                     </form> 
                 </div>
 
