--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -147,7 +147,7 @@ a{
     font-size: 1.2rem;
 }
 
-.newsletter{
+.formulario{
     width: 10rem;
     height: 2rem;
     border-radius: 1rem;
@@ -173,6 +173,101 @@ a{
     font-weight: bold;
     align-items: center;
 
+}
+
+
+/*carrito*/
+
+.main-carrito {
+    padding: 1rem;
+}
+
+.titulo-carrito {
+    font-size: 1.3rem;
+    color: #754668;
+    margin: 0.5rem 0px
+}
+
+.cuadro-carrito {
+    border: solid #5c3251 5px;
+    margin: 1rem 0px;
+}
+
+#imagen-producto {
+    height: 8rem;
+    width: 8rem;
+}
+
+#imagen-nombre {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0.5rem;
+    color: #754668
+}
+
+
+#cantidad-carrito {
+    display: flex;
+    flex-direction: row;
+    margin: 2rem 0.5rem;
+    color: #754668
+}
+
+#cantidad-carrito span {
+    margin: 0px 0.5rem;
+}
+
+#cantidad-carrito a {
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+#precio-carrito {
+    display: flex;
+    flex-direction: row;
+    margin: 2rem 0.5rem;
+}
+
+#precio-carrito h3{
+    color: #754668;
+}
+
+#basura {
+    margin: 2rem 0.5rem;
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
+    color: #754668
+}
+
+.link-codigopostal a{
+    color: black;
+    font-size: 1rem;
+    font-weight:bolder
+}
+
+.link-codigopostal{
+    margin: 0.5rem 0px
+}
+
+#subtotal-total {
+    display: flex;
+    justify-content: flex-end;
+}
+
+#boton{
+    height: 2rem;
+    border-radius: 0.5rem;
+    font-weight: bold;
+    color: #754668;
+    width: 8rem;
+    margin: 0rem 1rem;
+}
+
+.texto-carrito {
+    font-weight: 600;
 }
 
 
