--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -4,23 +4,136 @@
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
     margin: 0px;
-    padding: 0px;
+    }
+
+
+/*header mobile
+--------*/
+.header-top {
+    background-color: #fff;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width:100%;
 }
+
+.menu-icon{
+    color: #754668;
+    font-size: 20px;
+    margin: 10px;
+}
+
+.search-box{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid grey;
+    font-size: 17px;
+}
+
+.search-box button{
+    background-color: white;
+    border: none;
+}
+.fa-search{
+    color:#754668;
+    margin-right: .25rem;
+    padding: 10px;
+}
+
+
+.logo{
+    margin-left: 75px;
+}
+
+.header-right li, .header-right a{
+    display: flex;
+    align-items: center;
+    margin: .25rem;
+    color: #754668;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: .75rem;
+}
+
+.header-right i{
+    margin-right: .75rem;
+}
+
+/* header desktop 
+--------------------- */
+.search-box-desktop{
+    display: none;
+}
+
+.search-box-desktop input{
+color: #754668; 
+border: solid 1.5px;
+border-radius: .75rem;
+}
+
+.fa-search{
+    color:#754668;
+    margin-right: .25rem;
+}
+
+.header-bottom .nav-bar{
+    background-color: #754668;
+    color: white;
+    font-weight: bold;
+    width: 100%;
+    display: none;
+}
+
+.nav-bar{
+    padding: .25rem;
+}
+
+.nav-bar ul{
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+}
+
+.nav-bar a{
+    text-decoration: none;
+    color: white;
+    display: inline-block;
+}
+
+.nav-bar a:hover{
+    color:#e7badb;
+    background-color: #75466893;
+}
+
+.nav-bar a.active{
+    color:#e7badb;
+    display: none;
+
+}
+
+.search-box input{
+    color: #754668; 
+    border: solid 1.5px;
+    width: 100%;
+    display: none;
+    }
+
 
 /*main*/
 
 main {
-    background-color: #ffe8d6;
+    background-color: #fff;
 }
 
 .hero {
-    position: relative;
     height: 300px;
     overflow: hidden;
     background: url(/images/SLIDE1.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    margin-top: 1rem;
 }
 
 .hero-container {
@@ -37,6 +150,7 @@ main {
     padding: 6px 14px;
     display: inline-block;
     background-color: #754668;
+    display:none;
 }
 
 .hero-texto {
@@ -45,18 +159,15 @@ main {
 }
 
 
-
 .opciones-catalogo {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 0px 1em;
-    ;
 }
 
 .opcion {
-    border: solid #5c3251 5px;
     margin: 1rem;
     width: 18rem;
     height: 18rem;;
@@ -66,22 +177,23 @@ main {
 }
 
 #opcion1 {
-    background-image: url(/images/plantainterior.jpg);
+    background-image: url(/images/interior2.jpg);
 }
 #opcion2 {
-    background-image: url(/images/plantaexterior.jpg);
+    background-image: url(/images/plantaexterior2.jpg);
 }
 #opcion3 {
-    background-image: url(/images/deco.jpg);
+    background-image: url(/images/deco2.jpg);
 }
 #opcion4 {
-    background-image: url(/images/macetas.jpg);
+    background-image: url(/images/macetas4.jpg);
 }
 #opcion5 {
-    background-image: url(/images/accesorios.jpg);
+    background-image: url(/images/accesorios2.jpg);
+    width:
 }
 #opcion6 {
-    background-image: url(/images/fertilizantes.jpg);
+    background-image: url(/images/fertilizantes3.jpg);
 }
 
 .titulo-opcion {
@@ -95,29 +207,33 @@ main {
 .titulo-opcion a {
     color: white;
     text-decoration: none;
+    
 }
 
 .titulo-pd {
     font-weight: bold;
-    border: double 0.5rem #754668;
+    font-size: 1.25rem;
+    color: white;
+    background-color: #754668;
+    height: 100%;
     text-align: center;
     display: flex;
     justify-content: center;
-    margin: 3rem
+    
 }
 .section-productos-destacados {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-
- 
+    justify-content: center; 
 }
 .producto-destacado {
-    border: black solid 5px;
+    border: #754668 solid 1px;
     margin: 1rem 1rem;
     height: 8rem;
     width: 8rem;
 }
+
+
 /*footer-top*/
 
 .footer-top{
@@ -179,6 +295,38 @@ a{
 /*media*/
 
 @media (min-width: 768px){
+    .header-bottom{
+        display: block;
+    }
+
+    .menu-icon{
+        display: none;
+    }
+
+    .header-right li, .header-right a{
+        font-size: 18px;
+    }
+    
+    .header-right i{
+        margin-right: .75rem;
+    }
+
+    .search-box{
+        display:none;
+    }
+    
+    .search-box-desktop{
+       display: flex;
+    }
+    
+    .header-bottom .nav-bar{
+        display: block;
+    }
+
+    .nav-bar a.active{
+        display: block;
+    }
+
     .footer-top-main{
         display: flex;
         justify-content: space-around;
