--- a/views/index.html
+++ b/views/index.html
@@ -16,42 +16,56 @@
 <body>
 
     <header>
-
-        <div class="header-top">
-            <div class="search-box">
-                <i class="fas fa-search"></i>
-                <form action="" method="POST">                        
-                        <input type="text" name="search" placeholder="Buscar">
-                </form> 
-            </div>
-            
-            <div class="logo">
-                <img width=300px heigth=300px src="images/logo2.png" alt="Calathea-logo">
-            </div>
-            
-            <div class="header-right">
-                <ul>
-                    <li><a href="#"><i class="fas fa-user"></i> Iniciar sesión</a></li>
-                    <li><a href="#"><i class="fas fa-user-plus"></i> Registrarse</a></li>
-                    <li><a href="#"><i class="fas fa-shopping-cart"></i> Carrito</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="header-bottom">
-            <nav class="nav-bar">
-                    <ul class="nav">
-                        <li><a href="">Inicio</a></li>
-                        <li><a href="">Productos</a></li>
-                        <li><a href="">Quiénes Somos</a></li>
-                        <li><a href="">Preguntas Frecuentes</a></li>
-                        <li><a href="">Contacto</a></li>
+           <div class="header-top">
+                <div class="search-box-desktop">
+                    <form action="" method="POST">                        
+                            <input type="text" name="search" placeholder="Buscar">
+                            <i class="fas fa-search"></i> 
+                        </form>
+                    
+                </div>
+               
+                <div class="menu-icon">
+                    <i class="fas fa-bars"></i>
+                </div>
+                
+                <div class="logo">
+                    <img width=200px heigth=200px src="images/logo-cursiva.png" alt="Calathea-logo">
+                </div>
+                
+                <div class="header-right">
+                    <ul>
+                        <li><a href="#"><i class="fas fa-user"></i> Iniciar sesión</a></li>
+                        <li><a href="#"><i class="fas fa-user-plus"></i> Registrarse</a></li>
+                        <li><a href="#"><i class="fas fa-shopping-cart"></i> Carrito</a></li>
                     </ul>
-            </nav>
-        </div>
+                </div>
+            
+            </div>
         
-
+            <div class="header-bottom">
+                <div class="search-box">
+                    <form action="" method="POST">                        
+                            <input type="text" name="search" placeholder="Buscar">
+                    </form>
+                    <button><i class="fas fa-search"></i>
+                    </button>
+                </div>
+            
+                <div class="nav-bar">
+                    <nav class="nav-bar">
+                            <ul class="nav">
+                                <li><a href="" class="active">Inicio</a></li>
+                                <li><a href="">Productos</a></li>
+                                <li><a href="">Quiénes Somos</a></li>
+                                <li><a href="">Preguntas Frecuentes</a></li>
+                                <li><a href="">Contacto</a></li>
+                            </ul>
+                    </nav>
+                </div>
+            </div>      
     </header>
+
     <br>
     <main>
         <section class= "hero">
@@ -84,7 +98,7 @@
                 <p class="titulo-opcion"><a href= "">FERTILIZANTES</a></p>
             </section>
         </section>
-        <p class= "titulo-pd">PRODUCTOS DESTACADOS</p>
+        <p class="titulo-pd">PRODUCTOS DESTACADOS</p>
         <section class= "section-productos-destacados">
             <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
             <section class= "producto-destacado"><a href= "">PRODUCTO</a></section>
